Version 1
---------

Create a user model and add phpunit testing code