@@ -1,3 +1,4 @@
 *~
 assests/*
+*.log
 
