@@ -12,18 +12,23 @@ return array(
 	// application components
 	'components'=>array(
 		'db'=>array(
-			'connectionString' => 'sqlite:'.dirname(__FILE__).'/../data/testdrive.db',
-		),
-		// uncomment the following to use a MySQL database
-		/*
-		'db'=>array(
-			'connectionString' => 'mysql:host=localhost;dbname=testdrive',
+			'connectionString' => 'mysql:host=localhost;dbname=tutorial',
 			'emulatePrepare' => true,
 			'username' => 'root',
-			'password' => '',
+			'password' => 'sqlpass',
 			'charset' => 'utf8',
 		),
-		*/
+		'testdb'=>array(
+			// When adding multiple databases this line is nessisary. Yii assumes the class name when 'db'
+			// is the connectionID, otherwise the class must be specified
+			'class'=>'system.db.CDbConnection',  
+
+			'connectionString' => 'mysql:host=localhost;dbname=testtutorial',
+			'emulatePrepare' => true,
+			'username' => 'root',
+			'password' => 'sqlpass',
+			'charset' => 'utf8',
+		),
 		'log'=>array(
 			'class'=>'CLogRouter',
 			'routes'=>array(
