@@ -1,0 +1,2 @@
+./yiic migrate
+./yiic migrate --connectionID=testdb
